# Player

./: .gitignore  CMakeLists.txt  LICENSE  Player.sln  Player.vcxproj  Player.vcxproj.filters  README.md  addons.make  webmain.cpp
src/: config.cpp  config.h  main.cpp  ofApp.cpp  ofApp.h  ofxDataList.cpp  ofxDataList.h  ofxHttpTypes.h  ofxHttpUtils.cpp  ofxScrollingText.cpp  ofxScrollingText.h  ofxTextLabel.h  ofxTextLabelFbo.cpp  ofxTextLabelFbo.h  ofxTrueTypeFontUC.cpp  server.cpp  server.h
